Update app title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <title>Random Episode Generator | Love Death and Robots</title>
+    <title>Random Love Death and Robots | Episode Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
